fullsimple/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : IMPORT STRINGV
   4          | Term
   5          | LCID Binder
   6          | UCID TyBinder

   7  Binder : COLON Type
   8         | EQ Term

   9  Type : ArrowType

  10  AType : LPAREN Type RPAREN
  11        | USTRING
  12        | BOOL
  13        | LT FieldTypes GT
  14        | UUNIT
  15        | UCID
  16        | UFLOAT
  17        | LCURLY FieldTypes RCURLY
  18        | NAT

  19  AscribeTerm : ATerm AS Type
  20              | ATerm

  21  FieldTypes :
  22             | NEFieldTypes

  23  NEFieldTypes : FieldType
  24               | FieldType COMMA NEFieldTypes

  25  FieldType : LCID COLON Type
  26            | Type

  27  PathTerm : PathTerm DOT LCID
  28           | PathTerm DOT INTV
  29           | AscribeTerm

  30  ArrowType : AType ARROW ArrowType
  31            | AType

  32  Term : AppTerm
  33       | IF Term THEN Term ELSE Term
  34       | CASE Term OF Cases
  35       | LET LCID EQ Term IN Term
  36       | LET USCORE EQ Term IN Term
  37       | LAMBDA LCID COLON Type DOT Term
  38       | LAMBDA USCORE COLON Type DOT Term
  39       | LETREC LCID COLON Type EQ Term IN Term

  40  AppTerm : PathTerm
  41          | TIMESFLOAT PathTerm PathTerm
  42          | AppTerm PathTerm
  43          | FIX PathTerm
  44          | SUCC PathTerm
  45          | PRED PathTerm
  46          | ISZERO PathTerm

  47  TermSeq : Term
  48          | Term SEMI TermSeq

  49  ATerm : LPAREN TermSeq RPAREN
  50        | STRINGV
  51        | TRUE
  52        | FALSE
  53        | LT LCID EQ Term GT AS Type
  54        | UNIT
  55        | LCID
  56        | FLOATV
  57        | LCURLY Fields RCURLY
  58        | INERT LSQUARE Type RSQUARE
  59        | INTV

  60  Cases : Case
  61        | Case VBAR Cases

  62  Case : LT LCID EQ LCID GT DDARROW AppTerm

  63  Fields :
  64         | NEFields

  65  NEFields : Field
  66           | Field COMMA NEFields

  67  Field : LCID EQ Term
  68        | Term

  69  TyBinder :
  70           | EQ Type

  71  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (71)

	IMPORT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	UCID  shift 18
	LCID  shift 19
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	EOF  shift 23
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	toplevel  goto 27
	Command  goto 28
	Term  goto 29
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Command : IMPORT . STRINGV  (3)

	STRINGV  shift 34
	.  error


state 4
	Term : IF . Term THEN Term ELSE Term  (33)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 36
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 5
	ATerm : TRUE .  (51)

	.  reduce 51


state 6
	ATerm : FALSE .  (52)

	.  reduce 52


state 7
	Term : CASE . Term OF Cases  (34)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 37
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 8
	ATerm : UNIT .  (54)

	.  reduce 54


state 9
	AppTerm : TIMESFLOAT . PathTerm PathTerm  (41)

	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 8
	INERT  shift 11
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 38


state 10
	Term : LET . LCID EQ Term IN Term  (35)
	Term : LET . USCORE EQ Term IN Term  (36)

	LCID  shift 39
	USCORE  shift 40
	.  error


state 11
	ATerm : INERT . LSQUARE Type RSQUARE  (58)

	LSQUARE  shift 41
	.  error


state 12
	Term : LAMBDA . LCID COLON Type DOT Term  (37)
	Term : LAMBDA . USCORE COLON Type DOT Term  (38)

	LCID  shift 42
	USCORE  shift 43
	.  error


state 13
	AppTerm : FIX . PathTerm  (43)

	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 8
	INERT  shift 11
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 44


state 14
	Term : LETREC . LCID COLON Type EQ Term IN Term  (39)

	LCID  shift 45
	.  error


state 15
	AppTerm : SUCC . PathTerm  (44)

	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 8
	INERT  shift 11
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 46


state 16
	AppTerm : PRED . PathTerm  (45)

	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 8
	INERT  shift 11
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 47


state 17
	AppTerm : ISZERO . PathTerm  (46)

	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 8
	INERT  shift 11
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 48


state 18
	Command : UCID . TyBinder  (6)
	TyBinder : .  (69)

	EQ  shift 49
	SEMI  reduce 69

	TyBinder  goto 50


state 19
	Command : LCID . Binder  (5)
	ATerm : LCID .  (55)

	COLON  shift 51
	EQ  shift 52
	AS  reduce 55
	TRUE  reduce 55
	FALSE  reduce 55
	UNIT  reduce 55
	INERT  reduce 55
	LCID  reduce 55
	INTV  reduce 55
	FLOATV  reduce 55
	STRINGV  reduce 55
	DOT  reduce 55
	LCURLY  reduce 55
	LPAREN  reduce 55
	LT  reduce 55
	SEMI  reduce 55

	Binder  goto 53


state 20
	ATerm : INTV .  (59)

	.  reduce 59


state 21
	ATerm : FLOATV .  (56)

	.  reduce 56


state 22
	ATerm : STRINGV .  (50)

	.  reduce 50


state 23
	toplevel : EOF .  (1)

	.  reduce 1


state 24
	ATerm : LCURLY . Fields RCURLY  (57)
	Fields : .  (63)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 54
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	RCURLY  reduce 63

	Term  goto 55
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33
	Fields  goto 56
	NEFields  goto 57
	Field  goto 58


state 25
	ATerm : LPAREN . TermSeq RPAREN  (49)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 59
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33
	TermSeq  goto 60


state 26
	ATerm : LT . LCID EQ Term GT AS Type  (53)

	LCID  shift 61
	.  error


state 27
	%entry% : '\001' toplevel .  (71)

	.  reduce 71


state 28
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 62
	.  error


state 29
	Command : Term .  (4)

	.  reduce 4


state 30
	PathTerm : AscribeTerm .  (29)

	.  reduce 29


state 31
	AscribeTerm : ATerm . AS Type  (19)
	AscribeTerm : ATerm .  (20)

	AS  shift 63
	THEN  reduce 20
	ELSE  reduce 20
	TRUE  reduce 20
	FALSE  reduce 20
	OF  reduce 20
	UNIT  reduce 20
	IN  reduce 20
	INERT  reduce 20
	LCID  reduce 20
	INTV  reduce 20
	FLOATV  reduce 20
	STRINGV  reduce 20
	COMMA  reduce 20
	DOT  reduce 20
	GT  reduce 20
	LCURLY  reduce 20
	LPAREN  reduce 20
	LT  reduce 20
	RCURLY  reduce 20
	RPAREN  reduce 20
	SEMI  reduce 20
	VBAR  reduce 20


state 32
	PathTerm : PathTerm . DOT LCID  (27)
	PathTerm : PathTerm . DOT INTV  (28)
	AppTerm : PathTerm .  (40)

	DOT  shift 64
	THEN  reduce 40
	ELSE  reduce 40
	TRUE  reduce 40
	FALSE  reduce 40
	OF  reduce 40
	UNIT  reduce 40
	IN  reduce 40
	INERT  reduce 40
	LCID  reduce 40
	INTV  reduce 40
	FLOATV  reduce 40
	STRINGV  reduce 40
	COMMA  reduce 40
	GT  reduce 40
	LCURLY  reduce 40
	LPAREN  reduce 40
	LT  reduce 40
	RCURLY  reduce 40
	RPAREN  reduce 40
	SEMI  reduce 40
	VBAR  reduce 40


state 33
	Term : AppTerm .  (32)
	AppTerm : AppTerm . PathTerm  (42)

	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 8
	INERT  shift 11
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	THEN  reduce 32
	ELSE  reduce 32
	OF  reduce 32
	IN  reduce 32
	COMMA  reduce 32
	GT  reduce 32
	RCURLY  reduce 32
	RPAREN  reduce 32
	SEMI  reduce 32

	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 65


state 34
	Command : IMPORT STRINGV .  (3)

	.  reduce 3


state 35
	ATerm : LCID .  (55)

	.  reduce 55


state 36
	Term : IF Term . THEN Term ELSE Term  (33)

	THEN  shift 66
	.  error


state 37
	Term : CASE Term . OF Cases  (34)

	OF  shift 67
	.  error


state 38
	PathTerm : PathTerm . DOT LCID  (27)
	PathTerm : PathTerm . DOT INTV  (28)
	AppTerm : TIMESFLOAT PathTerm . PathTerm  (41)

	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 8
	INERT  shift 11
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	DOT  shift 64
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 68


state 39
	Term : LET LCID . EQ Term IN Term  (35)

	EQ  shift 69
	.  error


state 40
	Term : LET USCORE . EQ Term IN Term  (36)

	EQ  shift 70
	.  error


state 41
	ATerm : INERT LSQUARE . Type RSQUARE  (58)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	.  error

	Type  goto 80
	ArrowType  goto 81
	AType  goto 82


state 42
	Term : LAMBDA LCID . COLON Type DOT Term  (37)

	COLON  shift 83
	.  error


state 43
	Term : LAMBDA USCORE . COLON Type DOT Term  (38)

	COLON  shift 84
	.  error


state 44
	PathTerm : PathTerm . DOT LCID  (27)
	PathTerm : PathTerm . DOT INTV  (28)
	AppTerm : FIX PathTerm .  (43)

	DOT  shift 64
	THEN  reduce 43
	ELSE  reduce 43
	TRUE  reduce 43
	FALSE  reduce 43
	OF  reduce 43
	UNIT  reduce 43
	IN  reduce 43
	INERT  reduce 43
	LCID  reduce 43
	INTV  reduce 43
	FLOATV  reduce 43
	STRINGV  reduce 43
	COMMA  reduce 43
	GT  reduce 43
	LCURLY  reduce 43
	LPAREN  reduce 43
	LT  reduce 43
	RCURLY  reduce 43
	RPAREN  reduce 43
	SEMI  reduce 43
	VBAR  reduce 43


state 45
	Term : LETREC LCID . COLON Type EQ Term IN Term  (39)

	COLON  shift 85
	.  error


state 46
	PathTerm : PathTerm . DOT LCID  (27)
	PathTerm : PathTerm . DOT INTV  (28)
	AppTerm : SUCC PathTerm .  (44)

	DOT  shift 64
	THEN  reduce 44
	ELSE  reduce 44
	TRUE  reduce 44
	FALSE  reduce 44
	OF  reduce 44
	UNIT  reduce 44
	IN  reduce 44
	INERT  reduce 44
	LCID  reduce 44
	INTV  reduce 44
	FLOATV  reduce 44
	STRINGV  reduce 44
	COMMA  reduce 44
	GT  reduce 44
	LCURLY  reduce 44
	LPAREN  reduce 44
	LT  reduce 44
	RCURLY  reduce 44
	RPAREN  reduce 44
	SEMI  reduce 44
	VBAR  reduce 44


state 47
	PathTerm : PathTerm . DOT LCID  (27)
	PathTerm : PathTerm . DOT INTV  (28)
	AppTerm : PRED PathTerm .  (45)

	DOT  shift 64
	THEN  reduce 45
	ELSE  reduce 45
	TRUE  reduce 45
	FALSE  reduce 45
	OF  reduce 45
	UNIT  reduce 45
	IN  reduce 45
	INERT  reduce 45
	LCID  reduce 45
	INTV  reduce 45
	FLOATV  reduce 45
	STRINGV  reduce 45
	COMMA  reduce 45
	GT  reduce 45
	LCURLY  reduce 45
	LPAREN  reduce 45
	LT  reduce 45
	RCURLY  reduce 45
	RPAREN  reduce 45
	SEMI  reduce 45
	VBAR  reduce 45


state 48
	PathTerm : PathTerm . DOT LCID  (27)
	PathTerm : PathTerm . DOT INTV  (28)
	AppTerm : ISZERO PathTerm .  (46)

	DOT  shift 64
	THEN  reduce 46
	ELSE  reduce 46
	TRUE  reduce 46
	FALSE  reduce 46
	OF  reduce 46
	UNIT  reduce 46
	IN  reduce 46
	INERT  reduce 46
	LCID  reduce 46
	INTV  reduce 46
	FLOATV  reduce 46
	STRINGV  reduce 46
	COMMA  reduce 46
	GT  reduce 46
	LCURLY  reduce 46
	LPAREN  reduce 46
	LT  reduce 46
	RCURLY  reduce 46
	RPAREN  reduce 46
	SEMI  reduce 46
	VBAR  reduce 46


state 49
	TyBinder : EQ . Type  (70)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	.  error

	Type  goto 86
	ArrowType  goto 81
	AType  goto 82


state 50
	Command : UCID TyBinder .  (6)

	.  reduce 6


state 51
	Binder : COLON . Type  (7)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	.  error

	Type  goto 87
	ArrowType  goto 81
	AType  goto 82


state 52
	Binder : EQ . Term  (8)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 88
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 53
	Command : LCID Binder .  (5)

	.  reduce 5


state 54
	ATerm : LCID .  (55)
	Field : LCID . EQ Term  (67)

	EQ  shift 89
	AS  reduce 55
	TRUE  reduce 55
	FALSE  reduce 55
	UNIT  reduce 55
	INERT  reduce 55
	LCID  reduce 55
	INTV  reduce 55
	FLOATV  reduce 55
	STRINGV  reduce 55
	COMMA  reduce 55
	DOT  reduce 55
	LCURLY  reduce 55
	LPAREN  reduce 55
	LT  reduce 55
	RCURLY  reduce 55


state 55
	Field : Term .  (68)

	.  reduce 68


state 56
	ATerm : LCURLY Fields . RCURLY  (57)

	RCURLY  shift 90
	.  error


state 57
	Fields : NEFields .  (64)

	.  reduce 64


state 58
	NEFields : Field .  (65)
	NEFields : Field . COMMA NEFields  (66)

	COMMA  shift 91
	RCURLY  reduce 65


state 59
	TermSeq : Term .  (47)
	TermSeq : Term . SEMI TermSeq  (48)

	SEMI  shift 92
	RPAREN  reduce 47


state 60
	ATerm : LPAREN TermSeq . RPAREN  (49)

	RPAREN  shift 93
	.  error


state 61
	ATerm : LT LCID . EQ Term GT AS Type  (53)

	EQ  shift 94
	.  error


state 62
	toplevel : Command SEMI . toplevel  (2)

	IMPORT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	UCID  shift 18
	LCID  shift 19
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	EOF  shift 23
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	toplevel  goto 95
	Command  goto 28
	Term  goto 29
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 63
	AscribeTerm : ATerm AS . Type  (19)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	.  error

	Type  goto 96
	ArrowType  goto 81
	AType  goto 82


state 64
	PathTerm : PathTerm DOT . LCID  (27)
	PathTerm : PathTerm DOT . INTV  (28)

	LCID  shift 97
	INTV  shift 98
	.  error


state 65
	PathTerm : PathTerm . DOT LCID  (27)
	PathTerm : PathTerm . DOT INTV  (28)
	AppTerm : AppTerm PathTerm .  (42)

	DOT  shift 64
	THEN  reduce 42
	ELSE  reduce 42
	TRUE  reduce 42
	FALSE  reduce 42
	OF  reduce 42
	UNIT  reduce 42
	IN  reduce 42
	INERT  reduce 42
	LCID  reduce 42
	INTV  reduce 42
	FLOATV  reduce 42
	STRINGV  reduce 42
	COMMA  reduce 42
	GT  reduce 42
	LCURLY  reduce 42
	LPAREN  reduce 42
	LT  reduce 42
	RCURLY  reduce 42
	RPAREN  reduce 42
	SEMI  reduce 42
	VBAR  reduce 42


state 66
	Term : IF Term THEN . Term ELSE Term  (33)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 99
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 67
	Term : CASE Term OF . Cases  (34)

	LT  shift 100
	.  error

	Cases  goto 101
	Case  goto 102


state 68
	PathTerm : PathTerm . DOT LCID  (27)
	PathTerm : PathTerm . DOT INTV  (28)
	AppTerm : TIMESFLOAT PathTerm PathTerm .  (41)

	DOT  shift 64
	THEN  reduce 41
	ELSE  reduce 41
	TRUE  reduce 41
	FALSE  reduce 41
	OF  reduce 41
	UNIT  reduce 41
	IN  reduce 41
	INERT  reduce 41
	LCID  reduce 41
	INTV  reduce 41
	FLOATV  reduce 41
	STRINGV  reduce 41
	COMMA  reduce 41
	GT  reduce 41
	LCURLY  reduce 41
	LPAREN  reduce 41
	LT  reduce 41
	RCURLY  reduce 41
	RPAREN  reduce 41
	SEMI  reduce 41
	VBAR  reduce 41


state 69
	Term : LET LCID EQ . Term IN Term  (35)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 103
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 70
	Term : LET USCORE EQ . Term IN Term  (36)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 104
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 71
	AType : USTRING .  (11)

	.  reduce 11


state 72
	AType : BOOL .  (12)

	.  reduce 12


state 73
	AType : UUNIT .  (14)

	.  reduce 14


state 74
	AType : UFLOAT .  (16)

	.  reduce 16


state 75
	AType : NAT .  (18)

	.  reduce 18


state 76
	AType : UCID .  (15)

	.  reduce 15


state 77
	AType : LCURLY . FieldTypes RCURLY  (17)
	FieldTypes : .  (21)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCID  shift 105
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	RCURLY  reduce 21

	Type  goto 106
	ArrowType  goto 81
	AType  goto 82
	FieldTypes  goto 107
	NEFieldTypes  goto 108
	FieldType  goto 109


state 78
	AType : LPAREN . Type RPAREN  (10)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	.  error

	Type  goto 110
	ArrowType  goto 81
	AType  goto 82


state 79
	AType : LT . FieldTypes GT  (13)
	FieldTypes : .  (21)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCID  shift 105
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	GT  reduce 21

	Type  goto 106
	ArrowType  goto 81
	AType  goto 82
	FieldTypes  goto 111
	NEFieldTypes  goto 108
	FieldType  goto 109


state 80
	ATerm : INERT LSQUARE Type . RSQUARE  (58)

	RSQUARE  shift 112
	.  error


state 81
	Type : ArrowType .  (9)

	.  reduce 9


state 82
	ArrowType : AType . ARROW ArrowType  (30)
	ArrowType : AType .  (31)

	ARROW  shift 113
	AS  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	TRUE  reduce 31
	FALSE  reduce 31
	OF  reduce 31
	UNIT  reduce 31
	IN  reduce 31
	INERT  reduce 31
	LCID  reduce 31
	INTV  reduce 31
	FLOATV  reduce 31
	STRINGV  reduce 31
	COMMA  reduce 31
	DOT  reduce 31
	EQ  reduce 31
	GT  reduce 31
	LCURLY  reduce 31
	LPAREN  reduce 31
	LT  reduce 31
	RCURLY  reduce 31
	RPAREN  reduce 31
	RSQUARE  reduce 31
	SEMI  reduce 31
	VBAR  reduce 31


state 83
	Term : LAMBDA LCID COLON . Type DOT Term  (37)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	.  error

	Type  goto 114
	ArrowType  goto 81
	AType  goto 82


state 84
	Term : LAMBDA USCORE COLON . Type DOT Term  (38)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	.  error

	Type  goto 115
	ArrowType  goto 81
	AType  goto 82


state 85
	Term : LETREC LCID COLON . Type EQ Term IN Term  (39)

	USTRING  shift 71
	BOOL  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 75
	UCID  shift 76
	LCURLY  shift 77
	LPAREN  shift 78
	LT  shift 79
	.  error

	Type  goto 116
	ArrowType  goto 81
	AType  goto 82


state 86
	TyBinder : EQ Type .  (70)

	.  reduce 70


state 87
	Binder : COLON Type .  (7)

	.  reduce 7


state 88
	Binder : EQ Term .  (8)

	.  reduce 8


state 89
	Field : LCID EQ . Term  (67)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 117
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 90
	ATerm : LCURLY Fields RCURLY .  (57)

	.  reduce 57


state 91
	NEFields : Field COMMA . NEFields  (66)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 54
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 55
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33
	NEFields  goto 118
	Field  goto 58


state 92
	TermSeq : Term SEMI . TermSeq  (48)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 59
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33
	TermSeq  goto 119


state 93
	ATerm : LPAREN TermSeq RPAREN .  (49)

	.  reduce 49


state 94
	ATerm : LT LCID EQ . Term GT AS Type  (53)

	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	UNIT  shift 8
	TIMESFLOAT  shift 9
	LET  shift 10
	INERT  shift 11
	LAMBDA  shift 12
	FIX  shift 13
	LETREC  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LCID  shift 35
	INTV  shift 20
	FLOATV  shift 21
	STRINGV  shift 22
	LCURLY  shift 24
	LPAREN  shift 25
	LT  shift 26
	.  error

	Term  goto 120
	AscribeTerm  goto 30
	ATerm  goto 31
	PathTerm  goto 32
	AppTerm  goto 33


state 95
	toplevel : Command SEMI toplevel .  (2)

	.  reduce 2


state 96
	AscribeTerm : ATerm AS Type .  (19)

	.  reduce 19


state 97
	PathTerm : PathTerm DOT LCID .  (27)

	.  reduce 27


state 98
	PathTerm : PathTerm DOT INTV .  (28)

	.  reduce 28


state 99
	Term : IF Term THEN Term . ELSE Term  (33)
